--- a/style.css
+++ b/style.css
@@ -14,6 +14,18 @@ body{
     src: url('resources/Fontby7Ntypes.otf') format('opentype'), url('resources/Fontby7Ntypes.otf') format('truetype');
     font-weight: normal;
 }
+#Black-color{
+    background-color: rgb(0, 0, 0);
+}
+#cor01{
+    background-color: rgb(0, 255, 255);
+}
+#cor02{
+    background-color: rgb(92, 250, 0);
+}
+#cor03{
+    background-color: rgb(225, 0, 255);
+}
 .mouse {
     width: 20px;
     height: 20px;
@@ -53,10 +65,24 @@ body{
     background-color: rgb(96, 247, 197);
     cursor: pointer;
 }
+/* stylelint-disable-next-line rule-empty-line-before */
+/* stylelint-disable-next-line block-opening-brace-space-before */
 #pixel-board{
-    background-color: aquamarine;
+    background-color: rgb(255, 255, 255);
     height: 202px;
     width: 202px;
     border: 2px solid darkblue;
     margin: 0 auto;
+}
+.pixel{
+    background-color: white;
+    padding: 0;
+    margin: 0px;
+    height: 40px;
+    width: 40px;
+    border: 1px solid black;
+    display:inline-block;
+}
+#selected{
+    background-color: rgb(0, 0, 0);
 }
