--- a/style.css
+++ b/style.css
@@ -52,8 +52,11 @@ body {
 }
 
 #color-palette {
-  width: 180px;
-  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 240px;
+  text-align: center;
 }
 
 .color {
@@ -69,6 +72,7 @@ body {
 
 #button-random-color {
   text-align: center;
+  width: 100%;
   margin: 5px;
   background-color: aquamarine;
   border-radius: 10%;
@@ -77,26 +81,59 @@ body {
 #button-random-color:hover {
   background-color: rgb(96, 247, 197);
   cursor: pointer;
+  scale: 110%;
 }
 
 #pixel-board {
-  /* display: flex;
-  flex-direction: row;
-  justify-items: center;
-  justify-content: center; */
   display: flex;
   width: 210px;
   flex-wrap: wrap;
   margin: 0 auto;
+  cursor: cell;
 }
 
 .pixel {
   height: 40px;
   width: 40px;
   border: 1px solid rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
 }
 
 #selected {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   height: 20px;
+}
+
+.bar {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  width: 300px;
+  text-align: center;
+}
+
+#clear-board {
+  background-color: coral;
+  text-align: center;
+  border-radius: 10%;
+  cursor: pointer;
+  margin: 5px;
+}
+
+#clear-board:hover {
+  background-color: rgb(255, 147, 108);
+  scale: 110%;
+  text-align: center;
+  border-radius: 20%;
+}
+
+#input:hover {
+  scale: 110%;
+  border: 3px solid blueviolet;
+}
+
+#main {
+  display: flex;
+  justify-content: center;
 }
