Melhoria nos códigos, aparencia do site, arrumação no css e tentativa dos requisitos bonus

--- a/style.css
+++ b/style.css
@@ -5,31 +5,60 @@
 
 body {
   background-color: pink;
-}
-header{
-  background-color: blue;
-}
-#title {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  margin-bottom: 0;
-  margin-top: 20px;
+  background-image: url(resources/bk.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
 }
 
-.container{
-  background-color: red;
+@font-face {
+  font-family: magicFont;
+  src: url('resources/Fontby7Ntypes.otf') format('opentype'), url('resources/Fontby7Ntypes.otf') format('truetype');
+  /* stylelint-disable-next-line font-weight-notation */
+  font-weight: normal;
+}
+
+.mouse {
+  width: 20px;
+  height: 20px;
+  border-radius: 20%;
+  border: 1px solid black;
+  position: absolute;
+  pointer-events: none;
+}
+
+#selected {
+  background-color: black;
+  height: 20px;
+  text-align: unset;
+}
+
+#title {
+  text-align: center;
+  margin: 15px 20px;
+  /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
+  font-family: magicFont;
+  color: blueviolet;
+  background-color: rgba(230, 37, 182, 0.233);
+  box-shadow: 0 0 5px rgb(121, 4, 115);
+  animation: bg 10s infinite;
+}
+
+@keyframes bg {
+  50% {
+    color: crimson;
+  }
 }
 
 #header2 {
-  background-color: chartreuse;
+  display: flex;
+  justify-content: center;
 }
 
 #color-palette {
   width: 180px;
   margin: 0 auto;
   display: flex;
-
 }
 
 .color {
@@ -37,14 +66,13 @@ header{
   height: 40px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 20%;
+  cursor: pointer;
+  box-shadow: 0 0 5px rgb(36, 1, 41);
+  margin: 2px;
 }
 
-#button-random-color {
-  cursor: pointer;
-  margin: 0 auto;
-  display: flex;
-  margin-top: 10px;
-  background-color: aqua;
+.color:hover {
+  scale: 110%;
 }
 
 .pixel {
@@ -57,8 +85,62 @@ header{
 #pixel-board {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
-  width: 210px;
   margin: 0 auto;
   margin-top: 70px;
+  box-shadow: 0 0 5px black;
+  cursor: cell;
+}
+
+#clear-board {
+  cursor: pointer;
+  background-color: rgb(250, 152, 152);
+  margin: 8px 2px;
+  padding: 0 10px;
+  border-radius: 20%;
+  box-shadow: 0 0 5px black;
+}
+
+#button-random-color {
+  cursor: pointer;
+  background-color: rgb(66, 250, 250);
+  margin: 8px 2px;
+  padding: 0 10px;
+  border-radius: 20%;
+  box-shadow: 0 0 5px black;
+}
+
+#clear-board:hover {
+  scale: 110%;
+}
+
+#button-random-color:hover {
+  scale: 110%;
+}
+
+#generate-board {
+  cursor: pointer;
+  background-color: rgb(109, 250, 66);
+  margin: 8px 2px;
+  padding: 0 10px;
+  border-radius: 20%;
+  box-shadow: 0 0 5px black;
+}
+
+#generate-board:hover {
+  scale: 110%;
+}
+
+#board-size {
+  background-color: rgb(109, 250, 66);
+  margin: 8px 2px;
+  padding: 0 10px;
+  color: rgb(0, 15, 4);
+  border-radius: 20%;
+  box-shadow: 0 0 5px black;
+}
+
+#board-size:hover {
+  background-color: rgb(190, 250, 172);
+  scale: 110%;
+  border-color: blueviolet;
 }
